--- a/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
+++ b/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
@@ -290,6 +290,11 @@
            
             <!-- stack on xs, row from sm and up -->
             <div class="d-flex flex-column flex-sm-row gap-2 mt-50">
+              <a href="#formSection"
+                 class="btn btn-light btn-lg px-4 fw-semibold btn-cut-primary">
+                Zatražite besplatnu ponudu <i class="bi bi-arrow-right ms-1"></i>
+              </a>
+
               <a href="tel:+38162421515"
                  aria-label="Pozovite 062 42 15 15"
                  class="btn btn-light btn-lg px-4 fw-semibold btn-cut">
@@ -643,7 +648,7 @@
   </script>
 
   <!-- === CONTACT/OFFER FORM SECTION === -->
-  <section class="bg-light text-dark section-breathe">
+  <section id="formSection" class="bg-light text-dark section-breathe">
     <div class="container">
         <h3 class="text-center mt-50">Zainteresovani ste? <a href="tel:+38162421515"
      aria-label="Pozovite 062 42 15 15"
